--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,44 @@ img {
   color: #888;
 }
 
+.wrapper {
+  position: relative;
+}
+.wrapper__img-container {
+  padding: 3rem 0;
+}
+.wrapper--blue {
+  background-color: hsl(207deg, 100%, 98%);
+}
+.wrapper--blue::after {
+  content: "";
+  position: absolute;
+  top: -5px;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(207deg, 100%, 98%);
+}
+.wrapper__info {
+  width: 92%;
+  margin-inline: auto;
+  padding-bottom: 3rem;
+  max-width: 420px;
+}
+.wrapper__title {
+  font-family: "Poppins", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  margin: 1rem 0;
+  color: hsl(192deg, 100%, 9%);
+}
+.wrapper__text {
+  font-size: 1rem;
+  font-family: inherit;
+  text-align: center;
+  margin: 1rem 0;
+  color: hsl(192deg, 100%, 9%);
+  line-height: 1.5;
+}
+
 /*# sourceMappingURL=style.css.map */
