--- a/scss/style.scss
+++ b/scss/style.scss
@@ -123,3 +123,44 @@ img {
     color: #888;
   }
 }
+
+.wrapper {
+  position: relative;
+
+  &__img-container {
+    padding: 3rem 0;
+  }
+  &--blue {
+    background-color: $pale-blue;
+    &::after {
+      content: "";
+      position: absolute;
+      top: -5px;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background-color: $pale-blue;
+    }
+  }
+  &__info {
+    width: 92%;
+    margin-inline: auto;
+    padding-bottom: 3rem;
+    max-width: 420px;
+  }
+  &__title {
+    font-family: $header-font;
+    font-size: 2rem;
+    text-align: center;
+    margin: 1rem 0;
+    color: $dark-cyan;
+  }
+  &__text {
+    font-size: 1rem;
+    font-family: inherit;
+    text-align: center;
+    margin: 1rem 0;
+    color: $dark-cyan;
+    line-height: 1.5;
+  }
+}
