--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,10 +26,6 @@ h4 {
   font-family: "Poppins", sans-serif;
 }
 
-img {
-  width: 100%;
-}
-
 .header {
   &__wrapper {
     width: 92%;
@@ -51,12 +47,20 @@ img {
   &__btn {
     padding: 0.5rem 1.5rem;
     border-radius: 20px;
-    border: 2px solid $light-pink;
+    border: 2px solid $pink;
     background-color: #fff;
     font-size: 1rem;
     text-transform: capitalize;
     text-align: center;
-    color: $light-pink;
+    color: $pink;
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+    transform: scale(1);
+    &:hover {
+      border-color: $light-pink;
+      color: $light-pink;
+      transform: scale(1.05);
+    }
   }
 
   &__hero {
@@ -96,10 +100,20 @@ img {
     font-size: 1rem;
     font-family: inherit;
     box-shadow: 1px 1px 5px 2px #888;
+    transform: scale(1);
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+    &:hover {
+      background-color: $light-pink;
+      transform: scale(1.05);
+    }
   }
   &__img-container {
     width: 100%;
     margin: 3.5rem 0;
+    & img {
+      width: 100%;
+    }
   }
 }
 
@@ -129,6 +143,23 @@ img {
 
   &__img-container {
     padding: 3rem 0;
+    & img {
+      width: 100%;
+    }
+  }
+
+  &--cyan {
+    color: #fff;
+    background-color: $dark-cyan;
+    &::after {
+      content: "";
+      position: absolute;
+      top: -5px;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background-color: $dark-cyan;
+    }
   }
   &--blue {
     background-color: $pale-blue;
@@ -162,5 +193,149 @@ img {
     margin: 1rem 0;
     color: $dark-cyan;
     line-height: 1.5;
+  }
+
+  &__btn {
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: inherit;
+    color: #fff;
+    background-color: $pink;
+    padding: 0.5rem 1.5rem;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 1px 1px 5px 2px #888;
+    text-align: center;
+    text-transform: capitalize;
+    transform: scale(1);
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+    &:hover {
+      background-color: $light-pink;
+      transform: scale(1.05);
+    }
+  }
+
+  &__btn-container {
+    text-align: center;
+    margin: 2rem 0 5rem;
+  }
+}
+
+.curved {
+  width: 100%;
+  & img {
+    width: 100%;
+  }
+}
+
+.footer {
+  &__info {
+    width: 92%;
+    max-width: 420px;
+    margin: 0 auto;
+    padding: 3rem 0;
+  }
+  &__title {
+    text-align: left;
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+
+  &__text {
+    text-align: left;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 1.5rem 0;
+  }
+  &__form {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  &__input {
+    width: 100%;
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: inherit;
+    border: none;
+    border-radius: 10px;
+    margin: 1rem 0;
+  }
+
+  &__btn {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: inherit;
+    font-weight: 400;
+    text-transform: capitalize;
+    border: none;
+    border-radius: 10px;
+    transform: scale(1);
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+    &--pink {
+      background-color: $pink;
+      color: #fff;
+      &:hover {
+        background-color: $light-pink;
+        transform: scale(1.05);
+      }
+    }
+  }
+
+  &__contact {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+    & span:nth-of-type(1) {
+      margin-right: 1rem;
+    }
+  }
+
+  &__nav-container {
+    width: 25%;
+  }
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__item {
+    list-style: none;
+
+    & a {
+      text-decoration: none;
+
+      color: #fff;
+
+      & i {
+        font-size: 1.5rem;
+        transition: all 0.5s ease-in-out;
+        color: #fff;
+        transform: scale(1);
+        cursor: pointer;
+        &:hover {
+          color: hsl(210, 100%, 59%);
+          transform: scale(1.1);
+        }
+      }
+    }
+  }
+}
+
+.form {
+  &__input-container {
+    width: 100%;
+  }
+  &__error-message {
+    max-height: 0px;
+    color: $light-red;
+    overflow-y: hidden;
+    transition: all 0.5s ease-in-out;
+    &--show {
+      max-height: 30px;
+    }
   }
 }
