--- a/css/style.css
+++ b/css/style.css
@@ -309,4 +309,10 @@ h4 {
   max-height: 30px;
 }
 
+@media screen and (min-width: 1023px) {
+  .header__wrapper {
+    width: 85%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
