--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,7 +154,7 @@ h4 {
     &::after {
       content: "";
       position: absolute;
-      top: -5px;
+      top: -10px;
       z-index: -1;
       width: 100%;
       height: 100%;
@@ -166,7 +166,7 @@ h4 {
     &::after {
       content: "";
       position: absolute;
-      top: -5px;
+      top: -10px;
       z-index: -1;
       width: 100%;
       height: 100%;
@@ -343,5 +343,78 @@ h4 {
 @media screen and (min-width: 1023px) {
   .header__wrapper {
     width: 85%;
+  }
+  .hero__img-container {
+    width: 65%;
+    margin-inline: auto;
+  }
+  .reports {
+    width: 65%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hero__text {
+    margin: 2rem auto;
+    max-width: 500px;
+    text-align: center;
+  }
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    &__img-container {
+      width: 40%;
+    }
+
+    &__info {
+      max-width: 40%;
+      margin-inline: 0;
+    }
+  }
+
+  .topic-1__wrapper .wrapper__img-container,
+  .topic-3__wrapper .wrapper__img-container {
+    order: 2;
+  }
+  .topic-1__wrapper .wrapper__text,
+  .topic-1__wrapper .wrapper__title,
+  .topic-3__wrapper .wrapper__title,
+  .topic-3__wrapper .wrapper__text,
+  .topic-2__wrapper .wrapper__text,
+  .topic-2__wrapper .wrapper__title {
+    text-align: left;
+  }
+
+  .footer__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  section.footer__info {
+    width: 420px;
+    margin: 0;
+    order: 2;
+    margin-right: 7.5%;
+  }
+  article.footer__info {
+    width: 420px;
+    margin: 0;
+    order: 1;
+    margin-left: 7.5%;
+  }
+  .footer__form {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .form__input-container {
+    width: 60%;
+  }
+  .footer__input {
+    margin: 0;
   }
 }
